--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <p>It was originally created for the prototype of an e-learning website. This e-learning website was designed to contain games from various subjects and coincide with today's Common Core Standards.</p>
 
-<h3>View the portfolio along with bluenoodle.org by clicking on <a href="http://www.amybousamra.com/"> &copy; Amy Bousamra.</a></h3>
+<h3><i>View the portfolio along with bluenoodle.org by clicking on <a href="http://www.amybousamra.com/"> &copy; Amy Bousamra.</a></i></h3>
 		 <br>
 		 <br>
 		 <p>From the game developed for: <a href="http://www.bluenoodle.org/"> &copy;  bluenoodle.org</a></p>	
